--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   "author": "bmelicque",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "crypto-js": "^4.1.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.0"
   }
 }
