--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mysql2": "^2.3.0",
     "nodemon": "^2.0.13",
     "promise-mysql": "^5.0.4",
-    "validator": "^13.6.0"
+    "validator": "^13.6.0",
+    "zxcvbn": "^4.4.2"
   }
 }
