--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.3",
     "mysql2": "^2.3.0",
     "nodemon": "^2.0.13",
     "promise-mysql": "^5.0.4",
+    "uuid": "^8.3.2",
     "validator": "^13.6.0",
     "zxcvbn": "^4.4.2"
   }
